<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_km">约 %1$.1f 公里</string>
    <string name="about_km100">约 %1$d 公里</string>
    <string name="about_km100_sign">约 %1$d km</string>
    <string name="about_km_sign">约 %1$.1f km</string>
    <string name="about_meters">约 %1$d 米</string>
    <string name="about_meters_sign">约 %1$d m</string>
    <string name="acc_off_request_tip_sound">如需退出ACC自适应巡航，请轻踩刹车</string>
    <string name="acc_on_enter_toll_gate_during_navi_tts_warning">建议退出自适应巡航!</string>
    <string name="acc_on_enter_toll_gate_warning_title">前方经过收费站，建议退出自适应巡航!</string>
    <string name="acc_on_exit_control_access_warning_title">已驶出快速路，请谨慎驾驶，建议退出自适应巡航</string>
    <string name="acc_on_request_tip_sound">沿当前道路行驶%d公里，建议开启ACC自适应巡航</string>
    <string name="acc_on_request_tip_sound_first_d2x">沿当前道路行驶%d公里，开启ACC自适应巡航可以让车辆自动调节车速，无需人工干预，将方向盘左下方巡航拨杆往司机方向拨一次，即可开启</string>
    <string name="acc_on_request_tip_sound_first_e28">前方路段适合开启自适应巡航，开启方法是将档位杆下压1次后松开</string>
    <string name="acc_on_request_tip_subtitle_d2x">开启方法：将方向盘左下方巡航拨杆往司机方向拨一次</string>
    <string name="acc_on_request_tip_subtitle_e28">开启方法：将档位杆下压1次后松开</string>
    <string name="acc_on_request_tip_title">体验ACC自适应巡航</string>
    <string name="acc_on_tip_sound">ACC自适应巡航已开始，请注意安全驾驶，如需退出，请轻踩刹车</string>
    <string name="acc_on_tip_title">ACC自适应巡航已开始，请注意安全驾驶。</string>
    <string name="action_set_company">设为公司</string>
    <string name="action_set_company_failure">设置“公司”失败</string>
    <string name="action_set_company_success">设置“公司”成功</string>
    <string name="action_set_home">设为家</string>
    <string name="action_set_home_failure">设置“家”失败</string>
    <string name="action_set_home_success">设置“家”成功</string>
    <string name="activate_fail_message">\n鹏友，小鹏地图未激活。将车辆开到网络好的区域后，地图可自动激活。\n\n</string>
    <string name="activate_input_login_code">请输入激活码</string>
    <string name="activate_input_user_code">请输入序列号</string>
    <string name="activate_manual_close">完成关闭 %ds</string>
    <string name="activate_manual_ok">确认激活</string>
    <string name="activate_manual_retry">再次重试</string>
    <string name="activate_manual_tips">地图需要激活,请拨打售后客服电话 4008193388 获取序列号和激活码</string>
    <string name="activate_manual_tips_title">温 馨  提 示: </string>
    <string name="activate_manual_title">手动激活地图</string>
    <string name="activate_uuid_title">导航设备号: </string>
    <string name="add_new_navi">路线</string>
    <string name="add_waypoint">途经点</string>
    <string name="address_edit_content">地址: %s</string>
    <string name="ai_message_enough_parking_remain">充足</string>
    <string name="ai_message_fast_charge_parking_num">快充%d</string>
    <string name="ai_message_happy_ending_detail">查看</string>
    <string name="ai_message_happy_ending_sub_title">点开查看你的探索成就吧</string>
    <string name="ai_message_happy_ending_title">Xpilot城市探索者</string>
    <string name="ai_message_max_parking_remain">共999+</string>
    <string name="ai_message_no_parking_remain">已满</string>
    <string name="ai_message_normal_charge_parking_num">慢充%d</string>
    <string name="ai_message_remain_parking_num">空闲%d</string>
    <string name="ai_message_switch_route">好的</string>
    <string name="ai_message_total_parking_num">共%d</string>
    <string name="ai_push_charge_search_no_result">附近暂无充电站，请稍后再试!</string>
    <string name="ai_push_charge_search_scene_exception">异常情况,请稍后再试!</string>
    <string name="along_search_tip">沿途搜索：</string>
    <string name="amap_send2car_response_tts">好的</string>
    <string name="amap_send2car_response_word">好的</string>
    <string name="amap_send2car_subtitle">收到目的地：%s，现在导航过去，好吗？</string>
    <string name="amap_send2car_title">来自高德的地址</string>
    <string name="amap_send2car_tts">收到目的地%s，现在导航过去吗？确定请说好的</string>
    <string name="app_name">地图</string>
    <string name="around_search">搜周边</string>
    <string name="around_search_tip">周边搜索：</string>
    <string name="avoid_traffic_avoid_jam_tips_content">拥堵%1$s，约%2$s通过</string>
    <string name="avoid_traffic_avoid_jam_tips_title">已避开%1$s%2$s</string>
    <string name="avoid_traffic_out_rout_tips_content">%1$s拥堵%2$s，预计通过%3$s，已避开</string>
    <string name="avoid_traffic_out_rout_tips_content_elem">%1$s，已避开。</string>
    <string name="back">返回</string>
    <string name="bind_amap_dialog">绑定后自动同步高德的收藏夹到车,您也可在上车前,从手机高德地图App分享目的地到车</string>
    <string name="bind_amap_dialog_title">检测到您有高德账号,是否绑定?</string>
    <string name="bind_amap_fail_msg">绑定失败，您可以在“设置——手机与车无缝导航”中再次绑定</string>
    <string name="bind_amap_success_msg">绑定成功</string>
    <string name="bl_init_fail_dialog_confirm">重启导航</string>
    <string name="bl_init_fail_dialog_message">地图引擎启动失败!</string>
    <string name="bl_init_fail_dialog_title">地图初始化错误</string>
    <string name="btn_route_add_waypoint">搜途经点</string>
    <string name="btn_tittle_no_setting_for_me">不要添加</string>
    <string name="btn_tittle_setting_for_me">帮我添加</string>
    <string name="button_anchor_mode">锚点模式</string>
    <string name="button_sim_guide_go">走</string>
    <string name="button_sim_guide_pause">停</string>
    <string name="button_sim_speed_down">-</string>
    <string name="button_sim_speed_up">+</string>
    <string name="button_speed_mode">速度模式</string>
    <string name="call">电话</string>
    <string name="camera_average_speed_title">平均车速</string>
    <string name="camera_restrict_speed_text">&lt;font color=\"#20242E\"&gt;&lt;xpface value = \"xpeng-number\"&gt;&lt;xpsize value=\"30\"&gt;%s&lt;/xpsize&gt;&lt;/xpface&gt;&lt;/font&gt;</string>
    <string name="camera_suggest_speed">&lt;font&gt;&lt;xpsize value=\"24\"&gt;建议&lt;/xpsize&gt;&amp;#160;&lt;xpsize value=\"30\"&gt;%d&lt;/xpsize&gt;&amp;#160;&lt;xpsize value=\"24\"&gt;公里/小时&lt;/xpsize&gt;&lt;/font&gt;</string>
    <string name="camera_suggest_speed_title">建议车速</string>
    <string name="camera_unit_text"> 米</string>
    <string name="capture_btn_text">截屏</string>
    <string name="charge_desc_low_speed">低速充电服务费</string>
    <string name="charge_desc_park">超时占位违约金</string>
    <string name="charge_in_service_area">前方服务区有充电站</string>
    <string name="charge_no_price">以场地实际费用为准</string>
    <string name="charge_no_service_price">(服务费另算)</string>
    <string name="charge_panel_result_title">附近充电站</string>
    <string name="charge_panel_text">附近搜</string>
    <string name="charge_price">%1$s元/度</string>
    <string name="charge_service_price">(含服务费%1$s元/度)</string>
    <string name="charge_times">预计充电%d次</string>
    <string name="charge_times_multi">预计充电多次</string>
    <string name="charge_unable_reach_des">无法到达</string>
    <string name="company">公司</string>
    <string name="company_edit_positive_text">重新设置</string>
    <string name="company_edit_title">(公司)%s</string>
    <string name="company_edit_title_no_name">公司</string>
    <string name="company_edit_unknow">未知</string>
    <string name="content_not_setting_company_when_click">可以帮您把 %1$s设为公司吗？</string>
    <string name="content_not_setting_home_when_click">可以帮您把 %1$s设为家吗？</string>
    <string name="crash_warning">小鹏地图继续为您服务</string>
    <string name="cruise_default_road_name">无名道路</string>
    <string name="cruise_infoflow_card_browser">浏览地图，查询路线</string>
    <string name="cruise_infoflow_card_find">发现周边</string>
    <string name="cruise_infoflow_card_search">搜索目的地</string>
    <string name="current_selected_car_logo">当前车标</string>
    <string name="debug_anti_aliasing">抗锯齿</string>
    <string name="debug_bl_property_anima">动画</string>
    <string name="debug_bl_property_cruise">巡航</string>
    <string name="debug_bl_property_gesture">手势</string>
    <string name="debug_bl_property_guide">导航</string>
    <string name="debug_bl_property_reboot">重新启动</string>
    <string name="debug_lane_pause">暂停</string>
    <string name="debug_lane_play">回放</string>
    <string name="debug_lane_record">录制</string>
    <string name="debug_play_record">高德LaneData录制回放控制</string>
    <string name="go_here">开始导航</string>
    <string name="link_seamless_amap_agreement">《绑定服务协议》</string>
    <string name="link_seamless_amap_agreement_hint">点击“1秒绑定”即视为已阅读并同意</string>
    <string name="poi_delete_waypoint">移除途经点</string>
    <string name="poi_setting_waypoint">设为途经点</string>
    <string name="poi_start_route">去这里</string>
    <string name="restricted_rule_detail_guide_open_btn_name">查看详情</string>
    <string name="route_scene_back_content">返回算路</string>
    <string name="search_tip_context1">异地搜索，如 广州+小鹏汽车</string>
    <string name="search_tip_context2">首字母快搜，离线城市搜</string>
    <string name="search_tip_title">支持地点、类型、行政区划</string>
    <string name="setting">地图设置</string>
    <string name="setting_left_main_content">常用</string>
    <string name="setting_left_other_content">其他</string>
    <string name="setting_map_data_reset_btn_name">恢复</string>
    <string name="setting_map_data_reset_explanation_content">将所有设置选项恢复为默认状态</string>
    <string name="setting_map_data_reset_title_name">恢复默认设置</string>
    <string name="setting_offline_map_auto_update_explanation_content">WIFI下自动更新离线地图数据，保持离线数据始终最新</string>
    <string name="setting_offline_map_auto_update_title_name">离线地图自动更新</string>
    <string name="setting_scratch_spot_explanation_content">行驶至路面状况不佳的路段时，进行语音提醒</string>
    <string name="setting_scratch_spot_title_name">路面状况播报</string>
    <string name="start_explore">探路</string>
    <string name="vui_action_click">Click</string>
    <string name="vui_label_btn_route_add_waypoint">搜途经点|搜索|请输入目的地</string>
    <string name="vui_label_poi_card_container_navi">去这里|路线|开始导航</string>
    <string name="vui_label_poi_card_setting_home_container">设为家</string>
    <string name="vui_label_restrict_detail_btn_close">关闭</string>
    <string name="vui_label_restricted_pop_view">限行|限行提醒|限行详情</string>
    <string name="vui_label_route_explore">@string/start_explore</string>
    <string name="vui_label_route_start_navi">@string/go_here</string>
    <string name="vui_label_setting_close">关闭地图设置|关闭导航设置|退出地图设置|退出导航设置</string>
    <string name="vui_label_setting_map_data_reset">恢复|恢复默认设置</string>
    <string name="vui_label_setting_map_data_update_switch">离线地图自动更新</string>
    <string name="vui_label_setting_scratch_spot">@string/setting_scratch_spot_title_name</string>
</resources>