<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="center_vertical" android:id="@+id/restricted_rule_guide" android:focusable="true" android:layout_width="@dimen/tips_width" android:layout_height="@dimen/restrict_pop_max_height" android:layout_margin="20dp" app:vuiLabel="@string/vui_label_restricted_pop_view">
    <com.xiaopeng.xui.widget.XTextView android:ellipsize="end" android:id="@+id/restricted_rule_detail_guide_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:lines="1" android:layout_toLeftOf="@+id/clock_close" android:layout_centerVertical="true" android:layout_marginStart="28dp" android:layout_alignParentStart="true" style="@style/font_medium_land_28_port_26"/>
    <com.xiaopeng.xui.widget.XTextView android:gravity="center" android:id="@+id/clock_close" android:layout_centerVertical="true" android:layout_marginEnd="20dp" android:layout_toStartOf="@+id/restricted_rule_detail_btn" app:vuiAction="@string/vui_action_click" app:vuiLabel="@string/vui_label_restrict_detail_btn_close" style="@style/restrict_button_close_style"/>
    <com.xiaopeng.xui.widget.XTextView android:gravity="center" android:id="@+id/restricted_rule_detail_btn" android:text="@string/restricted_rule_detail_guide_open_btn_name" android:layout_centerVertical="true" android:layout_marginEnd="24dp" android:layout_alignParentEnd="true" app:vuiAction="@string/vui_action_click" style="@style/restrict_button_style"/>
</com.xiaopeng.xui.widget.XRelativeLayout>
