<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.montecarlo.views.MovableLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="center" android:orientation="vertical" android:background="@drawable/png_bg_shadow_secondlevel" android:padding="30dp" android:layout_width="300dp" android:layout_height="wrap_content" app:isAttach="true" app:isDrag="true">
    <com.xiaopeng.xui.widget.XTextView android:textColor="@color/common_text_title_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10dp" android:text="@string/debug_play_record"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="24sp" android:textColor="@color/batter_status_unreachable" android:id="@+id/tv_debug_lane_lonlat" android:layout_width="300dp" android:layout_height="wrap_content" android:layout_margin="5dp"/>
    <com.xiaopeng.xui.widget.XButton android:id="@+id/btn_debug_lane_record" android:layout_marginTop="10dp" android:text="@string/debug_lane_record" style="@style/XButton.Real.Small.Positive"/>
    <com.xiaopeng.xui.widget.XButton android:id="@+id/btn_debug_lane_play" android:layout_marginTop="10dp" android:text="@string/debug_lane_play" style="@style/XButton.Real.Small.Positive"/>
    <com.xiaopeng.xui.widget.XButton android:id="@+id/btn_debug_lane_reset" android:visibility="gone" android:layout_marginTop="10dp" android:text="@string/debug_lane_pause" style="@style/XButton.Real.Small.Positive"/>
    <com.xiaopeng.xui.widget.XSeekBar android:id="@+id/sb_debug_lane_process" android:layout_width="280dp" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:layout_marginBottom="20dp" android:max="100" android:progress="0" android:secondaryProgress="100" style="@style/XSeekBar"/>
    <com.xiaopeng.xui.widget.XLinearLayout android:orientation="horizontal" android:id="@+id/container_speed" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <com.xiaopeng.xui.widget.XButton android:id="@+id/btn_speed_down" android:text="@string/button_sim_speed_down" style="@style/XButton.Real.Small.Positive"/>
        <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/font_size_24" android:gravity="center" android:id="@+id/tv_speed" android:layout_width="50dp" android:layout_height="wrap_content" android:text="1" android:layout_marginStart="20dp" android:layout_marginEnd="20dp"/>
        <com.xiaopeng.xui.widget.XButton android:id="@+id/btn_speed_up" android:text="@string/button_sim_speed_up" style="@style/XButton.Real.Small.Positive"/>
    </com.xiaopeng.xui.widget.XLinearLayout>
    <com.xiaopeng.xui.widget.XTextView android:textSize="24sp" android:textColor="@color/batter_status_unreachable" android:id="@+id/tv_debug_lane_time" android:layout_width="300dp" android:layout_height="wrap_content" android:layout_margin="5dp"/>
</com.xiaopeng.montecarlo.views.MovableLayout>
