<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/container_back_view" android:background="@drawable/layer_bg_map_search_panel_big" android:paddingLeft="20dp" android:paddingRight="20dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.xiaopeng.xui.widget.XImageButton android:id="@+id/iv_back" android:layout_centerVertical="true" android:layout_marginStart="24dp" style="@style/button_back_style"/>
    <com.xiaopeng.xui.widget.XTextView android:textColor="@color/x_theme_text_03" android:ellipsize="end" android:gravity="center" android:id="@+id/btn_route_add_waypoint" android:paddingLeft="@dimen/cruise_panel_padding_left" android:visibility="gone" android:layout_width="@dimen/search_panel_width" android:layout_height="@dimen/search_panel_height" android:text="@string/btn_route_add_waypoint" android:singleLine="true" android:drawableLeft="@drawable/vector_ic_mid_search_white" android:drawablePadding="8dp" android:layout_toRightOf="@+id/iv_back" android:layout_centerVertical="true" app:vuiAction="Click" app:vuiElementType="TEXTVIEW" app:vuiLabel="@string/vui_label_btn_route_add_waypoint" style="@style/search_content_font_style"/>
    <com.xiaopeng.xui.widget.XTextView android:textColor="@color/x_theme_text_01" android:id="@+id/tv_back" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/route_scene_back_content" android:layout_centerInParent="true" app:vuiAction="@string/vui_action_click" style="@style/font_medium_land_24_port_22"/>
</com.xiaopeng.xui.widget.XRelativeLayout>
