<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="center" android:id="@+id/btn_start_navi" android:background="@drawable/layer_bg_button_start_navi" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent" app:vuiAction="@string/vui_action_click" app:vuiElementType="GROUP" app:vuiLabel="@string/vui_label_route_start_navi">
    <com.xiaopeng.xui.widget.XTextView android:textColor="@color/primary_text06" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/tv_start_navi" android:background="@android:color/transparent" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/go_here" android:drawableLeft="@drawable/png_ic_small_navigation" android:drawablePadding="8dp" style="@style/route_panel_btn_style"/>
</com.xiaopeng.xui.widget.XRelativeLayout>
