<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="@dimen/dimen_poi_card_view_poi_button_container_height" android:layout_marginTop="20dp" style="@style/poi_content_style">
    <com.xiaopeng.xui.widget.XRelativeLayout android:id="@+id/setting_home_container" android:background="@drawable/drawable_poi_card_view_bg_start_navi_in_poi_pop" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" app:vuiAction="@string/vui_action_click" app:vuiElementType="GROUP" app:vuiLabel="@string/vui_label_poi_card_setting_home_container">
        <com.xiaopeng.xui.widget.XTextView android:textColor="@color/color_poi_card_view_btn_setting_home" android:id="@+id/poi_btn_setting_home" android:clickable="false" android:text="@string/action_set_home" android:drawableLeft="@drawable/vector_ic_small_home" android:layout_centerInParent="true" style="@style/poi_pop_button"/>
    </com.xiaopeng.xui.widget.XRelativeLayout>
    <com.xiaopeng.xui.widget.XRelativeLayout android:id="@+id/setting_company_container" android:background="@drawable/drawable_poi_card_view_bg_start_navi_in_poi_pop" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" app:vuiAction="@string/vui_action_click" app:vuiElementType="GROUP" app:vuiLabel="@string/action_set_company">
        <com.xiaopeng.xui.widget.XTextView android:textColor="@color/color_poi_card_view_btn_setting_company" android:id="@+id/poi_btn_setting_company" android:clickable="false" android:text="@string/action_set_company" android:drawableLeft="@drawable/vector_ic_small_company" android:layout_centerInParent="true" style="@style/poi_pop_button"/>
    </com.xiaopeng.xui.widget.XRelativeLayout>
</merge>
