<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:cardButton="http://schemas.android.com/apk/res-auto" android:gravity="center" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="@dimen/dimen_poi_card_view_poi_button_container_height" android:layout_marginTop="20dp" style="@style/poi_bottom_content_style">
    <com.xiaopeng.montecarlo.views.PoiCardButton android:id="@+id/container_add_waypoint" android:visibility="gone" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_marginEnd="20dp" cardButton:buttonText="@string/poi_setting_waypoint" cardButton:focusBackground="@drawable/layer_bg_search_set_waypoint" cardButton:focusIcon="@drawable/vector_ic_small_addlocation01" cardButton:focusTextColor="@color/poi_card_text_color_04" cardButton:status="focus" cardButton:unfocusBackground="@drawable/layer_bg_search_set_newpoint" cardButton:unfocusIcon="@drawable/vector_ic_small_addlocation01" cardButton:unfocusTextColor="@color/poi_card_text_color_04" cardButton:vuiAction="@string/vui_action_click" cardButton:vuiElementType="GROUP" cardButton:vuiLabel="@string/poi_setting_waypoint"/>
    <com.xiaopeng.montecarlo.views.PoiCardButton android:id="@+id/container_delete_waypoint" android:visibility="gone" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" android:layout_marginEnd="20dp" cardButton:buttonText="@string/poi_delete_waypoint" cardButton:focusBackground="@drawable/layer_bg_search_set_waypoint" cardButton:focusIcon="@drawable/vector_ic_small_cutlocation" cardButton:focusTextColor="@color/poi_card_text_color_01" cardButton:status="unfocus" cardButton:unfocusBackground="@drawable/layer_bg_search_set_newpoint" cardButton:unfocusIcon="@drawable/vector_ic_small_cutlocation" cardButton:unfocusTextColor="@color/poi_card_text_color_01" cardButton:vuiAction="@string/vui_action_click" cardButton:vuiElementType="GROUP" cardButton:vuiLabel="@string/poi_delete_waypoint"/>
    <com.xiaopeng.montecarlo.views.PoiCardButton android:id="@+id/container_navi" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1" cardButton:buttonText="@string/poi_start_route" cardButton:focusBackground="@drawable/layer_bg_search_set_waypoint" cardButton:focusIcon="@drawable/vector_ic_small_route" cardButton:focusTextColor="@color/poi_card_text_color_04" cardButton:status="focus" cardButton:unfocusBackground="@drawable/layer_bg_search_set_newpoint" cardButton:unfocusIcon="@drawable/vector_ic_small_route01" cardButton:unfocusTextColor="@color/poi_card_text_color_01" cardButton:vuiAction="@string/vui_action_click" cardButton:vuiElementType="GROUP" cardButton:vuiLabel="@string/vui_label_poi_card_container_navi"/>
</merge>
