<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:montecarlo="http://schemas.android.com/apk/res-auto" android:gravity="center" android:id="@+id/btn_explore" android:background="@drawable/layer_bg_button_gray_normal" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" montecarlo:vuiAction="@string/vui_action_click" montecarlo:vuiElementType="GROUP" montecarlo:vuiLabel="@string/vui_label_route_explore">
    <com.xiaopeng.xui.widget.XImageView android:id="@+id/iv_explore" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="12.2dp" android:src="@drawable/selector_explore_button" android:layout_centerVertical="true"/>
    <com.xiaopeng.xui.widget.XTextView android:textColor="@color/primary_text01" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/tv_explore" android:background="@android:color/transparent" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/start_explore" android:layout_toRightOf="@+id/iv_explore" android:layout_centerVertical="true" style="@style/route_panel_btn_style"/>
</com.xiaopeng.xui.widget.XRelativeLayout>
