<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/setting_container" android:clickable="true" style="@style/setting_container_style">
    <com.xiaopeng.montecarlo.views.XpGroup android:id="@+id/setting_item_area" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="@dimen/setting_shadow_margin" android:layout_marginTop="@dimen/setting_shadow_margin" android:layout_marginRight="@dimen/setting_shadow_margin" android:layout_marginBottom="@dimen/setting_shadow_margin" app:vuiMode="DISABLED"/>
    <Space android:id="@+id/space_left_panel" android:layout_width="0dp" android:layout_height="0dp" android:layout_marginStart="@dimen/setting_left_tab_width" app:layout_constraintBottom_toBottomOf="@+id/setting_item_area" app:layout_constraintLeft_toLeftOf="@+id/setting_item_area" app:layout_constraintTop_toTopOf="@+id/setting_item_area"/>
    <com.xiaopeng.xui.widget.XImageButton android:id="@+id/btn_return" app:layout_constraintLeft_toLeftOf="@+id/setting_item_area" app:layout_constraintTop_toTopOf="@+id/setting_item_area" app:vuiAction="@string/vui_action_click" app:vuiElementType="IMAGEBUTTON" app:vuiLabel="@string/vui_label_setting_close" style="@style/button_close_large_style"/>
    <com.xiaopeng.xui.widget.XTextView android:id="@+id/setting_left_main_tab" android:layout_marginTop="30dp" android:text="@string/setting_left_main_content" app:layout_constraintHorizontal_chainStyle="spread" app:layout_constraintLeft_toLeftOf="@+id/setting_item_area" app:layout_constraintTop_toBottomOf="@+id/btn_return" app:vuiElementType="BUTTON" style="@style/setting_left_setting_tab_style"/>
    <com.xiaopeng.xui.widget.XTextView android:id="@+id/setting_left_more_tab" android:text="@string/setting_left_other_content" app:layout_constraintLeft_toLeftOf="@+id/setting_item_area" app:layout_constraintTop_toBottomOf="@+id/setting_left_main_tab" app:vuiElementType="BUTTON" style="@style/setting_left_more_tab_style"/>
    <com.xiaopeng.xui.widget.XTextView android:textColor="@color/primary_text01" android:id="@+id/setting_title" android:layout_marginTop="@dimen/setting_title_marginTop" android:text="@string/setting" app:layout_constraintLeft_toRightOf="@+id/space_left_panel" app:layout_constraintTop_toTopOf="@+id/setting_item_area" app:vuiMode="DISABLED" style="@style/setting_title_style"/>
    <com.xiaopeng.xui.widget.XRecyclerView android:id="@+id/recycler_view_setting_preference" android:layout_width="0dp" android:layout_height="0dp" android:layout_marginEnd="@dimen/setting_recycleview_right_margin" app:layout_constraintBottom_toBottomOf="@+id/setting_item_area" app:layout_constraintLeft_toRightOf="@+id/space_left_panel" app:layout_constraintRight_toRightOf="@+id/setting_item_area" app:layout_constraintTop_toTopOf="@+id/setting_left_main_tab"/>
</com.xiaopeng.xui.widget.XConstraintLayout>
